Added service to retrieve tags array