@@ -3,6 +3,7 @@ package com.springzr.museio.services.art.service.impl;
 import com.springzr.museio.services.art.model.Art;
 import com.springzr.museio.services.art.model.response.ArtGetResponse;
 import com.springzr.museio.services.art.repository.ArtRepository;
+import com.springzr.museio.services.tag.model.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -34,19 +35,22 @@ class ArtServiceImplTest {
         int page = 1, size = 10;
         PageRequest pageRequest = PageRequest.of(page - 1, size);
 
+        List<Tag> tags = List.of(new Tag("drawing"),new Tag("color"));
+
         List<Art> arts = List.of(
-                Art.builder().id(1L).title("Art 1").description("Description 1").build()
+                Art.builder().id(1L).title("Art 1").description("Description 1").tags(tags).build(),
+                Art.builder().id(2L).title("Art 2").description("Description 2").tags(tags).build()
         );
         Page<Art> pageResult = new PageImpl<>(arts, pageRequest, arts.size());
 
-        when(artRepository.findAll(pageRequest)).thenReturn(pageResult);
-
         // when
+        when(artRepository.findAll(pageRequest)).thenReturn(pageResult);
         ArtGetResponse response = artService.getArtByCollectionId(null, page, size);
 
         // then
-        assertThat(response.arts()).hasSize(1);
-        assertThat(response.arts().get(0).getTitle()).isEqualTo("Art 1");
+        assertThat(response.arts()).hasSize(2);
+        assertThat(response.arts().getFirst().title()).isEqualTo("Art 1");
+        assertThat(response.arts().get(1).title()).isEqualTo("Art 2");
         verify(artRepository).findAll(pageRequest);
     }
 
@@ -57,8 +61,10 @@ class ArtServiceImplTest {
         int page = 1, size = 10;
         PageRequest pageRequest = PageRequest.of(page - 1, size);
 
+        List<Tag> tags = List.of(new Tag("drawing"),new Tag("color"));
+
         List<Art> arts = List.of(
-                Art.builder().id(2L).title("Art 2").description("Description 2").build()
+                Art.builder().id(1L).title("Art 1").description("Description 1").tags(tags).build()
         );
         Page<Art> pageResult = new PageImpl<>(arts, pageRequest, arts.size());
 
@@ -69,7 +75,7 @@ class ArtServiceImplTest {
 
         // then
         assertThat(response.arts()).hasSize(1);
-        assertThat(response.arts().get(0).getTitle()).isEqualTo("Art 2");
+        assertThat(response.arts().getFirst().title()).isEqualTo("Art 1");
         verify(artRepository).findByCollectionId(collectionId, pageRequest);
     }
 }
